<resources>
    <string name="app_name">Assignment1</string>
    <string name="submit">Submit</string>
    <string name="car_image">Car Image</string>
    <string name="correct">CORRECT!</string>
    <string name="wrong">WRONG!</string>
    <string name="next">Next</string>
    <string name="enter_car_brand">Enter Car Brand</string>
    <string name="enter_letter">Enter letter:</string>
    <string name="car_game">Car Game</string>
    <string name="about">About</string>
    <string name="new_car_game">New Car Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>